Ajout de commentaires dans le code